# WebsiteAnalyzer

./: README.md  analyzer_utils.py  app.py  authorized_users.py  main.py  pdf_generator.py  pyproject.toml  replit.md  replit_prompt_template.txt
.streamlit/: config.toml
attached_assets/: REplit handover document.docx
